ATO-NONE: Tidy code (orchestration-shared-test)
- Address minor SonarLint issues